kube/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obvy-ingress
  namespace: obvy
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: prometheus.rainbowq.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  name: web
